<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AddActivity"
    tools:showIn="@layout/activity_add">

    <com.google.android.material.card.MaterialCardView
        android:layout_margin="10dp"
        android:id="@+id/seriesCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="200dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/seriesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/seriesTitle"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></EditText>

            <EditText
                android:id="@+id/seriesPlatform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/seriesPlatform"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seriesTitle"></EditText>

            <EditText
                android:id="@+id/seriesDay"
                android:layout_width="103dp"
                android:layout_height="48dp"
                android:layout_marginBottom="28dp"
                android:autofillHints="@string/seriesDay"
                android:hint="@string/seriesDay"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"></EditText>

            <EditText
                android:id="@+id/seriesMonth"
                android:layout_width="103dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="28dp"
                android:autofillHints="@string/seriesMonth"
                android:hint="@string/seriesMonth"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/seriesDay"></EditText>

            <EditText
                android:id="@+id/seriesYear"
                android:layout_width="146dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="28dp"
                android:autofillHints="@string/seriesYear"
                android:hint="@string/seriesYear"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"></EditText>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>